--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="/static/css/style.css?x49983" />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.5.3/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
     <!--<script src="/js/xeditable.js"></script>-->
