--- a/static/partials/about.html
+++ b/static/partials/about.html
@@ -9,6 +9,12 @@
   callData
 </button>
 
+<div class="sk-three-bounce" ng-show="loading">
+	<div class="sk-child sk-bounce1"></div>
+    <div class="sk-child sk-bounce2"></div>
+    <div class="sk-child sk-bounce3"></div>
+</div>
+
 <div>
 	<table class="table table-hover">
 		<thead>
