--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
     <!--<link href="/css/xeditable.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
-    <link rel="stylesheet" href="/static/css/style.css?x49983" />
+    <link rel="stylesheet" href="/static/css/style.css?x49983"/>
+    <link rel="stylesheet" href="/static/css/7-three-bounce.css?x49983"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <script src="https://code.angularjs.org/1.5.3/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
