--- a/static/partials/about.html
+++ b/static/partials/about.html
@@ -15,7 +15,7 @@
     <div class="sk-child sk-bounce3"></div>
 </div>
 
-<div>
+<div ng-show="!loading">
 	<table class="table table-hover">
 		<thead>
 			<tr>
