--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link href="/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="/static/css/style.css?x49983"/>
     <link rel="stylesheet" href="/static/css/7-three-bounce.css?x49983"/>
+    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <script src="https://code.angularjs.org/1.5.3/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
@@ -50,7 +51,7 @@
         </div>
       </div>
     </div>
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
