--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <script src="/static/js/app.js?x49983"></script>
   </head>
   <body ng-app="wbApp">
-    <!--<div class="container" ng-controller="NavbarCtrl">
+    <div class="container" ng-controller="NavbarCtrl">
       <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" ng-click="isCollapsed = !isCollapsed">
@@ -27,21 +27,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">William Bengtsson</a>
+          <a class="navbar-brand" href="/#/about">William Bengtsson</a>
         </div>
         <div class="navbar-collapse collapse" uib-collapse="isCollapsed">
           <ul class="nav navbar-nav navbar-right">
             <li uib-dropdown>
             <a href="" uib-dropdown-toggle>
-              Coding Space <span class="caret"></span>
+              Personal Space <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
-              <li><a href="/codingspace/ml">Machine Learning</a></li>
+              <li><a href="/#/about">Machine Learning</a></li>
             </ul>
           </ul>
         </div>
       </nav>
-    </div>-->
+    </div>
     <div>
       <div class="container-fluid">
         <div class="row row-centered">
